igt@i915_selftest@live_execlists - ODEBUG: free active object type: work_struct hint: engine_retire
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7608/fi-bdw-5557u/igt@i915_selftest@live_execlists.html#dmesg-warnings158
<3> [447.551657] ODEBUG: free active (active state 0) object type: work_struct hint: engine_retire+0x0/0xf0 [i915]
<4> [447.551714] WARNING: CPU: 1 PID: 323 at lib/debugobjects.c:484 debug_print_object+0x67/0x90
<4> [447.551717] Modules linked in: i915(+) amdgpu gpu_sched ttm vgem snd_hda_codec_hdmi mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel lpc_ich snd_hda_codec_realtek snd_hda_codec_generic snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm mei_me e1000e mei ptp prime_numbers pps_core [last unloaded: i915]
<4> [447.551740] CPU: 1 PID: 323 Comm: kworker/1:3 Tainted: G U 5.5.0-rc2-CI-CI_DRM_7608+ #1
<4> [447.551743] Hardware name: /NUC5i7RYB, BIOS RYBDWi35.86A.0362.2017.0118.0940 01/18/2017
<4> [447.551819] Workqueue: events engine_retire [i915]
<4> [447.551825] RIP: 0010:debug_print_object+0x67/0x90
<4> [447.551829] Code: 83 c2 01 8b 4b 14 4c 8b 45 00 89 15 37 f0 8c 02 8b 53 10 4c 89 e6 48 c7 c7 68 99 31 82 48 8b 14 d5 c0 36 07 82 e8 69 06 ba ff <0f> 0b 5b 83 05 13 94 23 01 01 5d 41 5c c3 83 05 08 94 23 01 01 c3
<4> [447.551832] RSP: 0018:ffffc900001bfd28 EFLAGS: 00010286
<4> [447.551835] RAX: 0000000000000000 RBX: ffff888243b4a2f8 RCX: 0000000000000001
<4> [447.551838] RDX: 0000000080000001 RSI: ffff88823e6e8920 RDI: 00000000ffffffff
<4> [447.551841] RBP: ffffffff8263fc60 R08: ffff88823e6e8920 R09: 0000000000000000
<4> [447.551844] R10: 0000000000000000 R11: 0000000000000000 R12: ffffffff82302ead
<4> [447.551847] R13: dead000000000100 R14: 0000000000000000 R15: ffffffff8263fc60
<4> [447.551850] FS: 0000000000000000(0000) GS:ffff88824ec80000(0000) knlGS:0000000000000000
<4> [447.551853] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [447.551855] CR2: 000055fe4216a288 CR3: 0000000005610003 CR4: 00000000003606e0
<4> [447.551858] Call Trace:
<4> [447.551864] debug_check_no_obj_freed+0x1dc/0x210
<4> [447.551950] ? i915_request_retire+0x343/0x960 [i915]
<4> [447.551955] kfree+0x19a/0x2f0
<4> [447.552035] i915_request_retire+0x343/0x960 [i915]
<4> [447.552101] retire_requests+0x4d/0x60 [i915]
<4> [447.552164] engine_retire+0x69/0xf0 [i915]
<4> [447.552171] process_one_work+0x26a/0x620
<4> [447.552183] worker_thread+0x37/0x380
<4> [447.552191] ? process_one_work+0x620/0x620
<4> [447.552193] kthread+0x119/0x130
<4> [447.552197] ? kthread_park+0x80/0x80
<4> [447.552204] ret_from_fork+0x3a/0x50
<4> [447.552220] irq event stamp: 1346882
<4> [447.552224] hardirqs last enabled at (1346881): [<ffffffff8112cc2a>] console_unlock+0x4ba/0x5a0
<4> [447.552229] hardirqs last disabled at (1346882): [<ffffffff81001c80>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [447.552233] softirqs last enabled at (1346832): [<ffffffff81e00385>] __do_softirq+0x385/0x47f
<4> [447.552237] softirqs last disabled at (1346809): [<ffffffff810b932a>] irq_exit+0xba/0xc0
<4> [447.552240] ---[ end trace cc5a209df5c54210 ]---
````
Edited by Chris Wilson